CSS fixes for default template (mostly spacing)

--- a/CSS/summer.css
+++ b/CSS/summer.css
@@ -244,6 +244,12 @@ input[type=text]{
 	    position: relative;
 	    clear: right;
 	 }
+	 
+	 #rbgdefaultbody {
+		margin-top: -65px;
+	    position: relative;
+	    clear: right;
+	 }
 
 }
 
@@ -451,6 +457,7 @@ input[type=text]{
 	clear: both;
 	position: relative;
 	float: none;
+	padding-top: 65px;
 }
 
 #rbgdefaultbody h1, h2, h3, p {
